test resizeable frame.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         </div>
         No limits on media type:
 
-        <Br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
-        <br>
+      <style>iframe {
+        width: 100%;
+        border: 0px;
+      }</style>
+      <iframe src="http://davidjbradshaw.com/iframe-resizer/example/frame.content.html" scrolling="no"></iframe>
     </div>
 </div>
