--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
         width: 100%;
         border: 0px;
       }</style>
-      <iframe src="http://davidjbradshaw.com/iframe-resizer/example/frame.content.html" scrolling="no"></iframe>
+      <iframe src="http://davidjbradshaw.com/iframe-resizer/example/frame.content.html" scrolling="no" sandbox="allow-scripts allow-forms allow-popups allow-same-origin allow-pointer-lock allow-modals"></iframe>
     </div>
 </div>
