make MOE transcript mockup work

--- a/index.html
+++ b/index.html
@@ -1,27 +1,9 @@
 <div class="container">
-    <h1>Super Simplified Information Only Page</h1>
-    <p class="lead">Brought to you by the Ministry of Keeping it Simple</p>
-    <p>
-        With your MyGov Account, you will be able to quickly access
-        government services related to your simple super service provider.
-    </p>
     <div ui-view>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Service Items</h3>
-            </div>
-            <div class="panel-body">
-                <ol>
-                    <li><a href="https://ltsa.ca/">Land Titles</a></li>
-                </ol>
-            </div>
-        </div>
-        No limits on media type:
-
       <style>iframe {
         width: 100%;
         border: 0px;
       }</style>
-      <iframe src="http://davidjbradshaw.com/iframe-resizer/example/frame.content.html" scrolling="no" sandbox="allow-scripts allow-forms allow-popups allow-same-origin allow-pointer-lock allow-modals"></iframe>
+      <iframe src="https://cos.citz.gov.bc.ca/MoE%20Transcripts%20Wireframe/Send_Transcript_-_Page_1_-_List__CS_.html" scrolling="no" sandbox="allow-scripts allow-forms allow-popups allow-same-origin allow-pointer-lock allow-modals"></iframe>
     </div>
 </div>
